// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton should render with many props assigned 1`] = `
<a
  className="LinkButton filled"
  href="https://tests.com"
  onClick={[Function]}
>
  Test
</a>
`;

exports[`LinkButton should render with required props 1`] = `
<a
  className="LinkButton"
  href="https://tests.com"
  onClick={[Function]}
>
  Test
</a>
`;
